// Vitest Snapshot v1

exports[`Generator > should emit css 1`] = `
[
  {
    "content": ".Button {
  display: flex;
  position: relative;
  flex-grow: 0;
  align-self: auto;
  width: fit-content;
  height: fit-content;
  border-style: none;
  background: #3b82f6;
  border-radius: 4px 4px 4px 4px;
  border-width: 0px 0px 0px 0px;
  overflow: hidden;
  flex-direction: row;
  gap: 6px;
  padding: 6px 12px 6px 12px;
  align-items: center;
  justify-content: center;
}
.Button__Button {
  display: flex;
  position: relative;
  flex-grow: 0;
  align-self: auto;
  width: fit-content;
  height: fit-content;
  font-family: Inter;
  font-size: 12px;
  font-weight: 500;
  font-style: normal;
  line-height: normal;
  letter-spacing: 0em;
  color: #ffffff;
  text-align: left;
  flex-direction: column;
  justify-content: flex-start;
}
.Button__chevron {
  display: flex;
  position: relative;
  flex-grow: 0;
  align-self: auto;
  width: 8px;
  height: 8px;
  border-style: none;
  border-radius: 0px 0px 0px 0px;
  border-width: 0px 0px 0px 0px;
  overflow: visible;
  flex-direction: row;
  gap: 0px;
  padding: 0px 0px 0px 0px;
  align-items: flex-start;
  justify-content: flex-start;
}
.Button__arrow_forward_ios {
  display: flex;
  position: absolute;
  left: 2.0833332538604736px;
  top: 0.6666666865348816px;
  flex-grow: 0;
  align-self: auto;
  width: 3.924999952316284px;
  height: 6.666666507720947px;
}
",
    "filePath": "Button.css",
  },
  {
    "content": "import \\"./Button.css\\";

export function Button(props) {
  return (
    <div {...props} className={\\"Button \\" + props.className}>
      <div className=\\"Button__Button\\">{props.text}</div>
      {props.showChevron && (
        <div className=\\"Button__chevron\\">
          <svg
            width={5}
            height={7}
            viewBox={\\"0 0 5 7\\"}
            fill={\\"none\\"}
            className=\\"Button__arrow_forward_ios\\"
          >
            <path
              d=\\"M0.674995 6.83334L0.0833282 6.24167L2.825 3.5L0.0833282 0.758338L0.674995 0.166672L4.00833 3.5L0.674995 6.83334Z\\"
              fill=\\"white\\"
            />
          </svg>
        </div>
      )}
    </div>
  );
}
",
    "filePath": "Button.js",
  },
  {
    "content": ".Form2 {
  display: flex;
  position: relative;
  flex-grow: 0;
  align-self: auto;
  width: fit-content;
  height: fit-content;
  border-style: none;
  background: #ffffff;
  border-radius: 0px 0px 0px 0px;
  border-width: 0px 0px 0px 0px;
  overflow: hidden;
  flex-direction: column;
  gap: 13px;
  padding: 16px 16px 16px 16px;
  align-items: flex-start;
  justify-content: flex-start;
}
.Form2__h1_____ {
  display: flex;
  position: relative;
  flex-grow: 0;
  align-self: auto;
  width: fit-content;
  height: fit-content;
  font-family: Inter;
  font-size: 12px;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  letter-spacing: 0em;
  color: #000000;
  text-align: left;
  flex-direction: column;
  justify-content: flex-start;
}
.Form2__Button {
  align-self: stretch;
  width: auto;
}
",
    "filePath": "Form2.css",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";
import \\"./Form2.css\\";

export function Form2(props) {
  return (
    <div {...props} className={\\"Form2 \\" + props.className}>
      <div className=\\"Form2__h1_____\\">Some Form (stretch)</div>
      <Button
        showChevron={false}
        text={\\"OK\\"}
        className=\\"Form2__Button\\"
      ></Button>
    </div>
  );
}
",
    "filePath": "Form2.js",
  },
  {
    "content": ".Form {
  display: flex;
  position: relative;
  flex-grow: 0;
  align-self: auto;
  width: fit-content;
  height: fit-content;
  border-style: none;
  background: #ffffff;
  border-radius: 0px 0px 0px 0px;
  border-width: 0px 0px 0px 0px;
  overflow: hidden;
  flex-direction: column;
  gap: 13px;
  padding: 16px 16px 16px 16px;
  align-items: flex-start;
  justify-content: flex-start;
}
.Form__h1_____ {
  display: flex;
  position: relative;
  flex-grow: 0;
  align-self: auto;
  width: fit-content;
  height: fit-content;
  font-family: Inter;
  font-size: 12px;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  letter-spacing: 0em;
  color: #000000;
  text-align: left;
  flex-direction: column;
  justify-content: flex-start;
}
.Form__Button {
}
",
    "filePath": "Form.css",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";
import \\"./Form.css\\";

export function Form(props) {
  return (
    <div {...props} className={\\"Form \\" + props.className}>
      <div className=\\"Form__h1_____\\">Some Form</div>
      <Button showChevron={true} text={\\"OK\\"} className=\\"Form__Button\\"></Button>
    </div>
  );
}
",
    "filePath": "Form.js",
  },
  {
    "content": ".Frame1 {
  display: flex;
  position: relative;
  flex-grow: 0;
  align-self: auto;
  width: 344px;
  height: 93px;
  border-style: none;
  background: #ffffff;
  border-radius: 0px 0px 0px 0px;
  border-width: 0px 0px 0px 0px;
  overflow: hidden;
  flex-direction: column;
  gap: 0px;
  padding: 0px 0px 0px 0px;
  align-items: flex-start;
  justify-content: flex-start;
}
.Frame1__Rectangle_1 {
  display: flex;
  position: absolute;
  left: 8px;
  top: 20px;
  flex-grow: 0;
  align-self: auto;
  width: 128px;
  height: 64px;
}
.Frame1__Rectangle_2 {
  display: flex;
  position: absolute;
  left: 153px;
  top: 8px;
  flex-grow: 0;
  align-self: auto;
  width: 128px;
  height: 64px;
}
",
    "filePath": "Frame1.css",
  },
  {
    "content": "import \\"./Frame1.css\\";

export function Frame1(props) {
  return (
    <div {...props} className={\\"Frame1 \\" + props.className}>
      <svg
        width={128}
        height={64}
        viewBox={\\"0 0 128 64\\"}
        fill={\\"none\\"}
        className=\\"Frame1__Rectangle_1\\"
      >
        <rect width=\\"128\\" height=\\"64\\" fill=\\"#D9D9D9\\" />
      </svg>
      <svg
        width={128}
        height={64}
        viewBox={\\"0 0 128 64\\"}
        fill={\\"none\\"}
        className=\\"Frame1__Rectangle_2\\"
      >
        <rect width=\\"128\\" height=\\"64\\" fill=\\"#FF0000\\" />
      </svg>
    </div>
  );
}
",
    "filePath": "Frame1.js",
  },
]
`;

exports[`Generator > should emit inline 1`] = `
[
  {
    "content": "export function Button(props) {
  return (
    <div
      {...props}
      style={{
        display: \\"flex\\",
        position: \\"relative\\",
        flexGrow: 0,
        alignSelf: \\"auto\\",
        width: \\"fit-content\\",
        height: \\"fit-content\\",
        borderStyle: \\"none\\",
        background: \\"#3b82f6\\",
        borderRadius: \\"4px 4px 4px 4px\\",
        borderWidth: \\"0px 0px 0px 0px\\",
        overflow: \\"hidden\\",
        flexDirection: \\"row\\",
        gap: \\"6px\\",
        padding: \\"6px 12px 6px 12px\\",
        alignItems: \\"center\\",
        justifyContent: \\"center\\",
        ...props.style,
      }}
    >
      <div
        style={{
          display: \\"flex\\",
          position: \\"relative\\",
          flexGrow: 0,
          alignSelf: \\"auto\\",
          width: \\"fit-content\\",
          height: \\"fit-content\\",
          fontFamily: \\"Inter\\",
          fontSize: \\"12px\\",
          fontWeight: 500,
          fontStyle: \\"normal\\",
          lineHeight: \\"normal\\",
          letterSpacing: \\"0em\\",
          color: \\"#ffffff\\",
          textAlign: \\"left\\",
          flexDirection: \\"column\\",
          justifyContent: \\"flex-start\\",
        }}
      >
        {props.text}
      </div>
      {props.showChevron && (
        <div
          style={{
            display: \\"flex\\",
            position: \\"relative\\",
            flexGrow: 0,
            alignSelf: \\"auto\\",
            width: \\"8px\\",
            height: \\"8px\\",
            borderStyle: \\"none\\",
            borderRadius: \\"0px 0px 0px 0px\\",
            borderWidth: \\"0px 0px 0px 0px\\",
            overflow: \\"visible\\",
            flexDirection: \\"row\\",
            gap: \\"0px\\",
            padding: \\"0px 0px 0px 0px\\",
            alignItems: \\"flex-start\\",
            justifyContent: \\"flex-start\\",
          }}
        >
          <svg
            width={5}
            height={7}
            viewBox={\\"0 0 5 7\\"}
            fill={\\"none\\"}
            style={{
              display: \\"flex\\",
              position: \\"absolute\\",
              left: \\"2.0833332538604736px\\",
              top: \\"0.6666666865348816px\\",
              flexGrow: 0,
              alignSelf: \\"auto\\",
              width: \\"3.924999952316284px\\",
              height: \\"6.666666507720947px\\",
            }}
          >
            <path
              d=\\"M0.674995 6.83334L0.0833282 6.24167L2.825 3.5L0.0833282 0.758338L0.674995 0.166672L4.00833 3.5L0.674995 6.83334Z\\"
              fill=\\"white\\"
            />
          </svg>
        </div>
      )}
    </div>
  );
}
",
    "filePath": "Button.js",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";

export function Form2(props) {
  return (
    <div
      {...props}
      style={{
        display: \\"flex\\",
        position: \\"relative\\",
        flexGrow: 0,
        alignSelf: \\"auto\\",
        width: \\"fit-content\\",
        height: \\"fit-content\\",
        borderStyle: \\"none\\",
        background: \\"#ffffff\\",
        borderRadius: \\"0px 0px 0px 0px\\",
        borderWidth: \\"0px 0px 0px 0px\\",
        overflow: \\"hidden\\",
        flexDirection: \\"column\\",
        gap: \\"13px\\",
        padding: \\"16px 16px 16px 16px\\",
        alignItems: \\"flex-start\\",
        justifyContent: \\"flex-start\\",
        ...props.style,
      }}
    >
      <div
        style={{
          display: \\"flex\\",
          position: \\"relative\\",
          flexGrow: 0,
          alignSelf: \\"auto\\",
          width: \\"fit-content\\",
          height: \\"fit-content\\",
          fontFamily: \\"Inter\\",
          fontSize: \\"12px\\",
          fontWeight: 400,
          fontStyle: \\"normal\\",
          lineHeight: \\"normal\\",
          letterSpacing: \\"0em\\",
          color: \\"#000000\\",
          textAlign: \\"left\\",
          flexDirection: \\"column\\",
          justifyContent: \\"flex-start\\",
        }}
      >
        Some Form (stretch)
      </div>
      <Button
        showChevron={false}
        text={\\"OK\\"}
        style={{ alignSelf: \\"stretch\\", width: \\"auto\\" }}
      ></Button>
    </div>
  );
}
",
    "filePath": "Form2.js",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";

export function Form(props) {
  return (
    <div
      {...props}
      style={{
        display: \\"flex\\",
        position: \\"relative\\",
        flexGrow: 0,
        alignSelf: \\"auto\\",
        width: \\"fit-content\\",
        height: \\"fit-content\\",
        borderStyle: \\"none\\",
        background: \\"#ffffff\\",
        borderRadius: \\"0px 0px 0px 0px\\",
        borderWidth: \\"0px 0px 0px 0px\\",
        overflow: \\"hidden\\",
        flexDirection: \\"column\\",
        gap: \\"13px\\",
        padding: \\"16px 16px 16px 16px\\",
        alignItems: \\"flex-start\\",
        justifyContent: \\"flex-start\\",
        ...props.style,
      }}
    >
      <div
        style={{
          display: \\"flex\\",
          position: \\"relative\\",
          flexGrow: 0,
          alignSelf: \\"auto\\",
          width: \\"fit-content\\",
          height: \\"fit-content\\",
          fontFamily: \\"Inter\\",
          fontSize: \\"12px\\",
          fontWeight: 400,
          fontStyle: \\"normal\\",
          lineHeight: \\"normal\\",
          letterSpacing: \\"0em\\",
          color: \\"#000000\\",
          textAlign: \\"left\\",
          flexDirection: \\"column\\",
          justifyContent: \\"flex-start\\",
        }}
      >
        Some Form
      </div>
      <Button showChevron={true} text={\\"OK\\"} style={{}}></Button>
    </div>
  );
}
",
    "filePath": "Form.js",
  },
  {
    "content": "export function Frame1(props) {
  return (
    <div
      {...props}
      style={{
        display: \\"flex\\",
        position: \\"relative\\",
        flexGrow: 0,
        alignSelf: \\"auto\\",
        width: \\"344px\\",
        height: \\"93px\\",
        borderStyle: \\"none\\",
        background: \\"#ffffff\\",
        borderRadius: \\"0px 0px 0px 0px\\",
        borderWidth: \\"0px 0px 0px 0px\\",
        overflow: \\"hidden\\",
        flexDirection: \\"column\\",
        gap: \\"0px\\",
        padding: \\"0px 0px 0px 0px\\",
        alignItems: \\"flex-start\\",
        justifyContent: \\"flex-start\\",
        ...props.style,
      }}
    >
      <svg
        width={128}
        height={64}
        viewBox={\\"0 0 128 64\\"}
        fill={\\"none\\"}
        style={{
          display: \\"flex\\",
          position: \\"absolute\\",
          left: \\"8px\\",
          top: \\"20px\\",
          flexGrow: 0,
          alignSelf: \\"auto\\",
          width: \\"128px\\",
          height: \\"64px\\",
        }}
      >
        <rect width=\\"128\\" height=\\"64\\" fill=\\"#D9D9D9\\" />
      </svg>
      <svg
        width={128}
        height={64}
        viewBox={\\"0 0 128 64\\"}
        fill={\\"none\\"}
        style={{
          display: \\"flex\\",
          position: \\"absolute\\",
          left: \\"153px\\",
          top: \\"8px\\",
          flexGrow: 0,
          alignSelf: \\"auto\\",
          width: \\"128px\\",
          height: \\"64px\\",
        }}
      >
        <rect width=\\"128\\" height=\\"64\\" fill=\\"#FF0000\\" />
      </svg>
    </div>
  );
}
",
    "filePath": "Frame1.js",
  },
]
`;

exports[`Generator > should emit tailwind 1`] = `
[
  {
    "content": "import { twMerge } from \\"tailwind-merge\\";

export function Button(props) {
  return (
    <div
      {...props}
      className={twMerge(
        \\"flex relative flex-none self-auto w-fit h-fit border-transparent bg-blue-500 rounded-tl rounded-tr rounded-br rounded-bl border-t-0 border-r-0 border-b-0 border-l-0 overflow-hidden flex-row gap-1.5 pt-1.5 pr-3 pb-1.5 pl-3 items-center justify-center\\",
        props.className
      )}
    >
      <div className=\\"flex relative flex-none self-auto w-fit h-fit font-['Inter'] text-xs font-medium not-italic leading-normal tracking-normal text-white text-left flex-col justify-start\\">
        {props.text}
      </div>
      {props.showChevron && (
        <div className=\\"flex relative flex-none self-auto w-2 h-2 border-transparent bg-transparent rounded-tl-none rounded-tr-none rounded-br-none rounded-bl-none border-t-0 border-r-0 border-b-0 border-l-0 overflow-visible flex-row gap-0 pt-0 pr-0 pb-0 pl-0 items-start justify-start\\">
          <svg
            width={5}
            height={7}
            viewBox={\\"0 0 5 7\\"}
            fill={\\"none\\"}
            className=\\"flex absolute left-[0.1302083283662796rem] top-[0.0416666679084301rem] flex-none self-auto w-[0.24531249701976776rem] h-[0.4166666567325592rem]\\"
          >
            <path
              d=\\"M0.674995 6.83334L0.0833282 6.24167L2.825 3.5L0.0833282 0.758338L0.674995 0.166672L4.00833 3.5L0.674995 6.83334Z\\"
              fill=\\"white\\"
            />
          </svg>
        </div>
      )}
    </div>
  );
}
",
    "filePath": "Button.js",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";
import { twMerge } from \\"tailwind-merge\\";

export function Form2(props) {
  return (
    <div
      {...props}
      className={twMerge(
        \\"flex relative flex-none self-auto w-fit h-fit border-transparent bg-white rounded-tl-none rounded-tr-none rounded-br-none rounded-bl-none border-t-0 border-r-0 border-b-0 border-l-0 overflow-hidden flex-col gap-[0.8125rem] pt-4 pr-4 pb-4 pl-4 items-start justify-start\\",
        props.className
      )}
    >
      <div className=\\"flex relative flex-none self-auto w-fit h-fit font-['Inter'] text-xs font-normal not-italic leading-normal tracking-normal text-black text-left flex-col justify-start\\">
        Some Form (stretch)
      </div>
      <Button
        showChevron={false}
        text={\\"OK\\"}
        className=\\"self-stretch w-auto\\"
      ></Button>
    </div>
  );
}
",
    "filePath": "Form2.js",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";
import { twMerge } from \\"tailwind-merge\\";

export function Form(props) {
  return (
    <div
      {...props}
      className={twMerge(
        \\"flex relative flex-none self-auto w-fit h-fit border-transparent bg-white rounded-tl-none rounded-tr-none rounded-br-none rounded-bl-none border-t-0 border-r-0 border-b-0 border-l-0 overflow-hidden flex-col gap-[0.8125rem] pt-4 pr-4 pb-4 pl-4 items-start justify-start\\",
        props.className
      )}
    >
      <div className=\\"flex relative flex-none self-auto w-fit h-fit font-['Inter'] text-xs font-normal not-italic leading-normal tracking-normal text-black text-left flex-col justify-start\\">
        Some Form
      </div>
      <Button showChevron={true} text={\\"OK\\"} className=\\"\\"></Button>
    </div>
  );
}
",
    "filePath": "Form.js",
  },
  {
    "content": "import { twMerge } from \\"tailwind-merge\\";

export function Frame1(props) {
  return (
    <div
      {...props}
      className={twMerge(
        \\"flex relative flex-none self-auto w-[21.5rem] h-[5.8125rem] border-transparent bg-white rounded-tl-none rounded-tr-none rounded-br-none rounded-bl-none border-t-0 border-r-0 border-b-0 border-l-0 overflow-hidden flex-col gap-0 pt-0 pr-0 pb-0 pl-0 items-start justify-start\\",
        props.className
      )}
    >
      <svg
        width={128}
        height={64}
        viewBox={\\"0 0 128 64\\"}
        fill={\\"none\\"}
        className=\\"flex absolute left-2 top-5 flex-none self-auto w-32 h-16\\"
      >
        <rect width=\\"128\\" height=\\"64\\" fill=\\"#D9D9D9\\" />
      </svg>
      <svg
        width={128}
        height={64}
        viewBox={\\"0 0 128 64\\"}
        fill={\\"none\\"}
        className=\\"flex absolute left-[9.5625rem] top-2 flex-none self-auto w-32 h-16\\"
      >
        <rect width=\\"128\\" height=\\"64\\" fill=\\"#FF0000\\" />
      </svg>
    </div>
  );
}
",
    "filePath": "Frame1.js",
  },
]
`;
